# GCPyramid

./: GCPyramid.spec  main.py  main.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  macos-ci.yaml
assets/: doc_template.docx
