[tool.poetry]
name = "gcpyramid"
version = "0.1.0"
description = ""
authors = ["navanchauhan <navanchauhan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
Pillow = "^9.5.0"
matplotlib = "^3.7.1"
pyinstaller = "^5.11.0"
sv-ttk = "^2.4.5"
ttkwidgets = "^0.13.0"
sentry-sdk = "^1.23.1"
darkdetect = "^0.8.0"
python-docx = "^0.8.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
